--- a/Plugins/Pacenote/language/german/pacenotes/packages/additional/strings.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/additional/strings.ini
@@ -10,23 +10,29 @@
 ; We keep each section sorted to ease the tracking of changes and translation.
 ;
 
-[STRINGS]
-CUT=Schneiden
-DONTCUT=Nicht Schneiden
-LONG=Lang
-LONGLONG=Langlang
-MAYBE=Vielleicht
-MINUS=Minus
-MINUSMINUS=Minus Minus
-NARROWS=Verengung (Straße)
-PLUS=Plus
-PLUSPLUS=Plus Plus
+[STRINGS=
+NARROWS=Verengt sich
+WIDEOUT=Wird breiter
+TIGHT=Eng
+MINUS=MINUS
+PLUS=PLUS
 SHORT=Kurz
-SHORTSHORT=Kurzkurz
-TIGHTENS=Verengung
-TIGHTENSBAD=Starke Verengung
-WIDEOUT=Verbreiterung
+LONG=Lang
 VERY_LONG=Sehr Lang
+HALF_LONG=Halblang
+ROUND=Rund
+SHARP=Scharf
+MAYBE=Vielleicht
+EARLY=Früh
+LATE=Spät
+INSIDE=Innen
+OUTSIDE=Aussen
+L_FOOT_BRAKING=Links bremsen
+DOUBLE=Doppel
+EASY=Leicht
+HARD=Hart
+MINUSMINUS=MinusMinus
+LONGLONG=Sehr Lang
 VERY_SHORT=Sehr Kurz
-
-
+SHORTSHORT=Sehr Kurz
+PLUSPLUS=PlusPlus
