--- a/Plugins/Pacenote/language/german/pacenotes/packages/links/strings.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/links/strings.ini
@@ -14,8 +14,8 @@
 DISTANCE_CALL=Entfernung
 EMPTY_CALL=Leere Ansage
 AND=Und
-INTO=Hinein
-ONTO=Hinein
+INTO=In
+ONTO=Auf
 CALLOUT_TIME=Ansagezeit
 CALLOUT_DISTANCE=Ansageentfernung
 CALLOUT_ADJUST=Ansageberichtigung
