--- a/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
@@ -1,70 +1,336 @@
 ;
-; File:         strings.ini
-; Version:      1.1
-; Date:         2014-06-19
-;
-;
+; File:         Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
+; Version:      1.0-smo
+; Date:         2023-02-24
+; Origin: 		Workerbee
+; Changes:		Smo
+; Contact:		https://github.com/Smo-RBR/RBR-German-tts-Codriver/issues
+
 ; Language:     german / Deutsch
 ; Encoding:     UTF-8
 ;
-; We keep each section sorted to ease the tracking of changes and translation.
-; Die Abschnitte sind sortiert, um Änderungen und Übersetzung zu vereinfachen.
+; We sort calls alphabetically to ease the tracking of changes and translation.
+; Die Aufrufe sind sortiert, um Änderungen und Übersetzung zu vereinfachen.
 ;
 
 [STRINGS]
-; legacy pacenotes
 90_LEFT=90 Links
 90_RIGHT=90 Rechts
+AFTER=Nach
 AND=Und
+AT=Bei
+BAD=Schlecht
+BAD_CAMBER=Fällt aussen
+BARRELS=Fässer
+BEFORE=Vor
+BEHIND=Hinter
+BIG=Groß
+BLIND:Blind
+BORDER=Rand
+BRAKE=Bremsen
 BRIDGE=Brücke
-BUMP=Unebenheit
+BUMP=Schlag
+BUMPS=Schläge
+BUMPY=Bucklig
+BUSH=Busch
+CALLOUT_ADJUST=Ansage anpassen
 CALLOUT_DISTANCE=Ansageentfernung
 CALLOUT_TIME=Ansagezeit
+CAMBER=Hängt innen
 CARE=Vorsicht
+CAREIN=Vorsicht innen
+CAREOUT=Vorsicht aussen
 CAUTION=Achtung
-CAUTION_WATER=Vorsicht Wasser
+CAUTION_WATER=Wasser
+CHICANE=Schikane
+CLIP=Einhängen
+COBBLES=Pflaster
+CONCRETE=Beton
+CONTINUESOVERCREST=
+CRAMPED=Verengt
+CREST=Kuppe
+CURB=Randstein
+CURVE=Kurve
 CUT=Schneiden
+DAMP=Feucht
+DEEPCUT=Stark schneiden
+DEEPRUTS=Arge Rillen
+DIP=Senke
+DIRECTLY=Sofort
+DIRT=Schmutz
+DIRTY=Schmutzig
 DISTANCE_CALL=Entfernung
+DITCH=Graben
+DONE=Ende
 DONTCUT=Nicht Schneiden
+DOUBLE=Doppel
+DOUBLE_CAUTION=Gut Aufpassen
+DOWNHILL=Bergab
+DRAWS_IN=Dreht Ein
+DROPS=Fällt
+DROPS_LEFT=Fällt Links
+DROPS_RIGHT=Fällt Rechts
+DRY=Trocken
+EARLY=Früh
+EASY=Leicht
+EASY=Wenig
 EASYLEFT=Leicht Links
 EASYRIGHT=Leicht Rechts
+EASY_LEFT=Leicht Links
+EASY_RIGHT=Leicht Rechts
+EDGE=Kante
+EMPTY_CALL=Leere Ansage
 END_OF_TRACK=Streckenende
+ENTRY=Eingang
+EXACT=Genau
+FAKES=Täuscht
+FAST=Schnell
 FASTLEFT=Schnell Links
 FASTRIGHT=Schnell Rechts
+FENCE=Zaun
 FINISH=Ziel
+FIVE_LEFT=5 Links
+FIVE_RIGHT=5 Rechts
 FLATLEFT=Flach Links
-FLATRIGHT=Flach Rechts
+FLATLEFT=Voll Links
+FLATOUT=Vollgas
+FLAT_RIGHT=Voll Rechts
+FLAT_RIGHT=Voll Rechts
+FOR=Für
 FORD=Furt
+FORK_LEFT=Gabelung Links
+FORK_RIGHT=Gabelung Rechts
+FOUR_LEFT=4 Links
+FOUR_RIGHT=4 Rechts
+FULL=Voll  
+FULLCUT=Stark schneiden
+GONARROW=Eng fahren
+GOOD=Gut
+GOOD_GRIP=Viel Grip
 GOSTRAIGHT=Geradeaus
-HAIRPINLEFT=Haarnadel Links
-HAIRPINRIGHT=Haarnadel Rechts
-INTO=Hinein
+GOWIDE=Weit Fahren
+GO_FULL=Tritt drauf
+GRAVEL=Schotter
+GRIP=Grip
+GRIP_OFF=Kein Grip
+GRIT=Kies
+HAE=Linie
+HAIRPIN_LEFT=Kehre Links
+HAIRPIN_RIGHT=Kehre Rechts
+HALF_LONG=Halblang
+HANDBRAKE=Handbremse
+HARD=Stark
+HIDDEN=Verborgen
+HOLD=Halten
+HOLE=Loch
+HOLLOW=Senke
+HOOK=Einhängen
+HOUSE=Haus
+ICE=Eis
+ICY=Eisig
+IN=In (In)
+INSIDE=Innen
+INTO=In (Into)
+ISLAND=Insel
 JUMP=Sprung
+JUMP_BIND=Sprung vermeiden
+JUMP_FLAT=Sprung voll
+JUNCTION=Kreuzung
 KEEPLEFT=Links halten
 KEEPMIDDLE=Mittig halten
 KEEPRIGHT=Rechts halten
+KEEP_CENTRE=Mittig halten
+KEEP_IN=Innen halten
+KEEP_OUT=Aussen halten
 KLEFT=K Links
 KRIGHT=K Rechts
+LATE=Spät
+LEFT=Links
+LEFT_AROUND=Links herum
+LEFT_ENTRY_CHICANE=Schikane Eingang Links
+LEFT_FIVE=Links 5
+LEFT_FLAT=Links voll
+LEFT_FOUR=Links 4
+LEFT_INTO=Links in
+LEFT_ONE=Links 1
+LEFT_RIGHT=Links-Rechts
+LEFT_SIX=Links 6
+LEFT_SQUARE=Links 90
+LEFT_THREE=Links 3
+LEFT_TWO=Links 2
+LIGHT=Leicht
+LIGHT_CUT=Cut Leicht
+LINE=Linie
 LONG=Lang
+LONGLONG=Sehr Lang
+LOOSE_GRAVEL=Loser Schotter
+L_FOOT_BRAKING=Links bremsen
+MANY=Viele
+MARSHALLS=Marschalls
+MAST=Mast
 MAYBE=Vielleicht
+MEDIUMLEFT=Medium Links
 MEDIUMLEFT=Normal Links
+MEDIUMRIGHT=Medium Rechts
 MEDIUMRIGHT=Normal Rechts
-NARROWS=Verengung (Straße)
-ONTO=Hinein
-OVERCREST=Über Hügel
+MINUS=MINUS
+MINUSMINUS=MinusMinus
+MUCH=Viel
+MUDDY=schlammig
+NARROW=Eng
+NARROWS=Enger
+NEAR=Nah
+NEGATIVE=Negativ
+NEGATIVE_CAMBER=Hängt Aussen
+NETTING=Netz
+OFF=Von
+OIKEELTA=Rechts halten
+ON=Auf
+ONE_LEFT=1 Links
+ONE_RIGHT=1 Rechts
+ONSPLIT=Splitt
+ONTO=Auf
+ONTO_COBBLES=Auf Pflaster
+ONTO_CONCRETE=Auf Beton
+ONTO_GRAVEL=Auf Schotter
+ONTO_GRIT=Auf Kies
+ONTO_SNOW=Auf Schnee
+ONTO_TARMAC=Auf Asphalt
+OPENS=Macht Auf
+OPENSTIGHTENS=Macht auf dann zu
+OUTSIDE=Außen
+OVER=Über
+OVERCREST=Über Kuppe
+OVER_BRIDGE=Über Brücke
+OVER_JUMP=Über Sprung
+OVER_RAILS=Über Schienen
+OVER_RAILWAY=Über Eisenbahn
 PACENOTES_FILE=Pacenotes Datei
+PATH=Weg
 PLACEHOLDER=Platzhalter
+PLUS=Plus
+PLUSPLUS=PlusPlus
+POSITIVE=Positiv
+POSITIVE_CAMBER=Hängt Innen
+POST=Pfosten
+PUDDLE=Pfütze
+RAILS=Gleise
 RANGES_FILE=Ranges Datei
+REVERSE_CAMBER=Wanne
+RIGHT=Rechts
+RIGHT_AROUND=Rechts Herum
+RIGHT_ENTRY_CHICANE=
+RIGHT_ENTRY_CHICANE=Schikane Eingang Rechts
+RIGHT_FIVE=Rechts 5
+RIGHT_FLAT=Rechts voll
+RIGHT_FOUR=Rechts 4
+RIGHT_INTO=Rechts in
+RIGHT_LEFT=Rechts-Links
+RIGHT_ONE=Rechts 1
+RIGHT_SIX=Rechts 6
+RIGHT_SQUARE=Rechts 90
+RIGHT_THREE=Rechts 3
+RIGHT_TWO=Rechts 2
+ROAD=Straße
+ROCK=Fels
+ROIKU=Hängt
+ROUND=Rund
+ROUNDABOUT=Kreisel
+ROUND_BARRELS=Fässer (rund)
+RUBBLE=Geröll
+RUTS=Rillen
+SHARP=Scharf
+SHARP=Spitz
+SHORT=Kurz
+SHORTSHORT=Sehr Kurz
+SHOULDER=Bankett
+SIDEWAYS=Versetzt
+SIGN=Schild
+SIX_LEFT=6 Links
+SIX_RIGHT=6 Rechts
+SLIDE=Gleiten
+SLIGHT=Etwas
+SLIPPERY=Schmiert
+SLIPPY=Rutschig
+SLOW=Langsam
+SLOWING=Langsamer
+SMALL=Klein
+SMALL_CREST=Kleine Kuppe
+SNOW=Schnee
 SOUND_FILE=Sound Datei
 SOUND_INDEX=Sound Index
+SPECTATORS=Zuschauer
 SPLIT=Zwischenzeit
+SPLIT_TIME=Zwischenzeit
+SQUARE_LEFT=90 Links
+SQUARE_RIGHT=90 Rechts
 STANDARD_CALL=Standardansage
 START=Start
+STEEP_DROP=Steil runter
+STEEP_HILL=Starkes Gefälle
+STEEP_INCLINE=Strake Steigung
+STEEP_SLOPE=Starkes Gefälle
+STONE=Stein
+STOP=Stop
+STRAIGHT=Gerade
+STUMP=Stumpf
+TAKE_SPEED=Speed halten
+TAPE=Band
+TARMAC=Asphalt
+THEN=Dann
+THREE_LEFT=3 Links
+THREE_RIGHT=3 Rechts
+THROUGH=Durch
+TIGHT=Eng
+TIGHTENS=Verengt sich
+TIGHTENS=Macht zu
 TIGHTENS=Verengung
+TIGHTENSBAD=Macht sehr zu
 TIGHTENSBAD=Starke Verengung
-TWISTY=Kurvenreich
+TIGHTENSBAD=Verengt Stark
+TIGHTENSLATE=Verengt spät
+TIGHTENSOPENS=Macht zu, dann auf
+TIGHTENSTOACUTE=Enger Kehre
+TIGHTENSTOFIVE=Enger 5
+TIGHTENSTOFOUR=Enger 4
+TIGHTENSTOONE=Enger 1
+TIGHTENSTOSIX=Enger 6
+TIGHTENSTOTHREE=Enger 3
+TIGHTENSTOTWO=Enger 2
+TOACUTE=In Kehre
+TODIP=Durch Senke
+TOFIVE=In 5
+TOFOUR=In 4
+TOONE=In 1
+TOSIX=In 6
+TOTHREE=In 3
+TOTWO=In 2
+TO_90=In 90
+TO_SIGHT_DISTANCE=Bis Sicht
+TREE=Baum
+TRIPLE_CAUTION=Gefahr
+TUNNEL=Tunnel
+TURN=Abbiegen
+TWISTY=Kurvig
+TWO_LEFT=2 Links
+TWO_RIGHT=2 Rechts
+TYRES=Reifen
+UNDERSTEER=Untersteuert
 UNKNOWN=Unbekannt
-WIDEOUT=Verbreiterung
+UNTIL=Bis
+UPHILL=Bergauf
+VASEMMALTA=Links halten
+VERY=Sehr
+VERY_LONG=Sehr Lang
+VERY_SHORT=Sehr Kurz
+WALK=Weg
+WALL=Mauer
+WATER=Wasser
+WET=Nass
+WIDE=Breit
+WIDEOUT=Breiter
+WOODEN_FENCE=Holzzaun
+
 
 ; categories
 ADDITIONAL=Zusätze
