--- a/Plugins/Pacenote/language/german/pacenotes/packages/additional/Extended.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/additional/Extended.ini
@@ -1,21 +1,16 @@
 ;
-; File:         Extended.ini
-; Version:      1.0
-; Date:         2012-04-01
-;
-;
-; Language:     german
+; File:         Plugins/Pacenote/language/german/pacenotes/packages/additional/Extended
+; Version:      1.0-smo
+; Date:         2023-02-24
+; Origin: 		Workerbee
+; Changes:		Smo
+; Contact:		https://github.com/Smo-RBR/RBR-German-tts-Codriver/issues
+
+; Language:     german / Deutsch
 ; Encoding:     UTF-8
 ;
-; We keep each section sorted to ease the tracking of changes and translation.
-;
-
-[STRINGS]
-CUT=Cut
-DONTCUT=Don't Cut
-NARROWS=Enger
-TIGHTENS=Macht Zu
-TIGHTENSBAD=Macht Stark Zu
-WIDEOUT=Breiter
-
-
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;                                                                                                           ;;
+;;      Übersetzungen befinden sich in Plugins/Pacenote/language/german/pacenotes/packages/strings.ini       ;;
+;;                                                                                                           ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
