--- a/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
@@ -46,7 +46,7 @@ CHICANE=Schikane
 CLIP=Einhängen
 COBBLES=Pflaster
 CONCRETE=Beton
-CONTINUESOVERCREST=
+CONTINUESOVERCREST=geht über Kuppe
 CRAMPED=Verengt
 CREST=Kuppe
 CURB=Randstein
@@ -62,7 +62,9 @@ DIRTY=Schmutzig
 DISTANCE_CALL=Entfernung
 DITCH=Graben
 DONE=Ende
-DONTCUT=Nicht Schneiden
+DONTCUT=Nicht Eingangs Schneiden
+DONTCUTLATE=Nicht spät schneden
+DONTCUTEARLY=Nicht früh schneiden
 DOUBLE=Doppel
 DOUBLE_CAUTION=Gut Aufpassen
 DOWNHILL=Bergab
@@ -128,9 +130,9 @@ HOOK=Einhängen
 HOUSE=Haus
 ICE=Eis
 ICY=Eisig
-IN=In (In)
+IN=In 
 INSIDE=Innen
-INTO=In (Into)
+INTO=In wie Into
 ISLAND=Insel
 JUMP=Sprung
 JUMP_BIND=Sprung vermeiden
@@ -219,7 +221,6 @@ RANGES_FILE=Ranges Datei
 REVERSE_CAMBER=Wanne
 RIGHT=Rechts
 RIGHT_AROUND=Rechts Herum
-RIGHT_ENTRY_CHICANE=
 RIGHT_ENTRY_CHICANE=Schikane Eingang Rechts
 RIGHT_FIVE=Rechts 5
 RIGHT_FLAT=Rechts voll
