--- a/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
@@ -1,18 +1,15 @@
 ;
 ; File:         Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
-; Version:      1.0-smo
+; Version:		1.0-smo
 ; Date:         2023-02-24
 ; Origin: 		Workerbee
+; Compatibility to Janne Laahanens Mod V2
 ; Changes:		Smo
 ; Contact:		https://github.com/Smo-RBR/RBR-German-tts-Codriver/issues
 
 ; Language:     german / Deutsch
 ; Encoding:     UTF-8
 ;
-; We sort calls alphabetically to ease the tracking of changes and translation.
-; Die Aufrufe sind sortiert, um Änderungen und Übersetzung zu vereinfachen.
-;
-
 [STRINGS]
 90_LEFT=90 Links
 90_RIGHT=90 Rechts
