--- a/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
@@ -59,9 +59,9 @@ DIRTY=Schmutzig
 DISTANCE_CALL=Entfernung
 DITCH=Graben
 DONE=Ende
-DONTCUT=Nicht Eingangs Schneiden
+DONTCUT=Nicht Schneiden
 DONTCUTLATE=Nicht spät schneden
-DONTCUTEARLY=Nicht früh schneiden
+DONTCUTEARLY=Nicht Eingangs schneiden
 DOUBLE=Doppel
 DOUBLE_CAUTION=Gut Aufpassen
 DOWNHILL=Bergab
@@ -90,10 +90,8 @@ FENCE=Zaun
 FINISH=Ziel
 FIVE_LEFT=5 Links
 FIVE_RIGHT=5 Rechts
-FLATLEFT=Flach Links
-FLATLEFT=Voll Links
+FLAT_LEFT=Voll Links
 FLATOUT=Vollgas
-FLAT_RIGHT=Voll Rechts
 FLAT_RIGHT=Voll Rechts
 FOR=Für
 FORD=Furt
@@ -332,7 +330,7 @@ WOODEN_FENCE=Holzzaun
 
 ; categories
 ADDITIONAL=Zusätze
-ADJECTIVES=Adjektive
+ADJECTIVES=Kurvenverlauf
 CAUTIONS=Warnungen
 CONDITION=Zustand
 CONSTRUCTION=Bebauung
