--- a/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
@@ -60,7 +60,7 @@ DISTANCE_CALL=Entfernung
 DITCH=Graben
 DONE=Ende
 DONTCUT=Nicht Schneiden
-DONTCUTLATE=Nicht spät schneden
+DONTCUTLATE=Nicht spät schneiden
 DONTCUTEARLY=Nicht Eingangs schneiden
 DOUBLE=Doppel
 DOUBLE_CAUTION=Gut Aufpassen
@@ -156,7 +156,7 @@ LEFT_SQUARE=Links 90
 LEFT_THREE=Links 3
 LEFT_TWO=Links 2
 LIGHT=Leicht
-LIGHT_CUT=Cut Leicht
+LIGHT_CUT=Leicht schneiden
 LINE=Linie
 LONG=Lang
 LONGLONG=Sehr Lang
@@ -194,7 +194,7 @@ ONTO_GRIT=Auf Kies
 ONTO_SNOW=Auf Schnee
 ONTO_TARMAC=Auf Asphalt
 OPENS=Macht Auf
-OPENSTIGHTENS=Macht auf dann zu
+OPENSTIGHTENS=Macht auf, dann zu
 OUTSIDE=Außen
 OVER=Über
 OVERCREST=Über Kuppe
@@ -240,7 +240,7 @@ SHARP=Spitz
 SHORT=Kurz
 SHORTSHORT=Sehr Kurz
 SHOULDER=Bankett
-SIDEWAYS=Versetzt
+SIDEWAYS=Versetzt fahren
 SIGN=Schild
 SIX_LEFT=6 Links
 SIX_RIGHT=6 Rechts
@@ -281,8 +281,6 @@ TIGHT=Eng
 TIGHTENS=Verengt sich
 TIGHTENS=Macht zu
 TIGHTENS=Verengung
-TIGHTENSBAD=Macht sehr zu
-TIGHTENSBAD=Starke Verengung
 TIGHTENSBAD=Verengt Stark
 TIGHTENSLATE=Verengt spät
 TIGHTENSOPENS=Macht zu, dann auf
@@ -330,7 +328,7 @@ WOODEN_FENCE=Holzzaun
 
 ; categories
 ADDITIONAL=Zusätze
-ADJECTIVES=Kurvenverlauf
+
 CAUTIONS=Warnungen
 CONDITION=Zustand
 CONSTRUCTION=Bebauung
