--- a/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
@@ -22,7 +22,7 @@ BARRELS=Fässer
 BEFORE=Vor
 BEHIND=Hinter
 BIG=Groß
-BLIND:Blind
+BLIND=Blind
 BORDER=Rand
 BRAKE=Bremsen
 BRIDGE=Brücke
@@ -170,7 +170,7 @@ MEDIUMLEFT=Medium Links
 MEDIUMLEFT=Normal Links
 MEDIUMRIGHT=Medium Rechts
 MEDIUMRIGHT=Normal Rechts
-MINUS=MINUS
+MINUS=Minus
 MINUSMINUS=MinusMinus
 MUCH=Viel
 MUDDY=schlammig
@@ -203,7 +203,7 @@ OVER_JUMP=Über Sprung
 OVER_RAILS=Über Schienen
 OVER_RAILWAY=Über Eisenbahn
 PACENOTES_FILE=Pacenotes Datei
-PATH=Weg
+PATH=Pfad
 PLACEHOLDER=Platzhalter
 PLUS=Plus
 PLUSPLUS=PlusPlus
@@ -336,8 +336,7 @@ CORNERS=Kurven
 DRIVING=Fahren
 HAZARDS=Gefahren
 LINE=Linie
-LINKS=Verknüpfungen
-MODIFIER=Zusatz
+MODIFIER=Legacy
 MODIFIERS=Zusätze
 OBSTACLES=Hindernisse
 POSITIONING=Positionierung
