--- a/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
@@ -120,7 +120,7 @@ HARD=Stark
 HIDDEN=Verborgen
 HOLD=Halten
 HOLE=Loch
-HOLLOW=Senke
+HOLLOW=Mulde
 HOOK=Einhängen
 HOUSE=Haus
 ICE=Eis
@@ -244,7 +244,7 @@ SIDEWAYS=Versetzt fahren
 SIGN=Schild
 SIX_LEFT=6 Links
 SIX_RIGHT=6 Rechts
-SLIDE=Gleiten
+SLIDE=Driften
 SLIGHT=Etwas
 SLIPPERY=Schmiert
 SLIPPY=Rutschig
@@ -264,7 +264,7 @@ STANDARD_CALL=Standardansage
 START=Start
 STEEP_DROP=Steil runter
 STEEP_HILL=Starkes Gefälle
-STEEP_INCLINE=Strake Steigung
+STEEP_INCLINE=Starke Steigung
 STEEP_SLOPE=Starkes Gefälle
 STONE=Stein
 STOP=Stop
@@ -332,7 +332,7 @@ ADDITIONAL=Zusätze
 CAUTIONS=Warnungen
 CONDITION=Zustand
 CONSTRUCTION=Bebauung
-CORNERS=Kurven
+Kurven=KURVEN
 DRIVING=Fahren
 HAZARDS=Gefahren
 LINE=Linie
