--- a/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
@@ -256,8 +256,8 @@ SNOW=Schnee
 SOUND_FILE=Sound Datei
 SOUND_INDEX=Sound Index
 SPECTATORS=Zuschauer
-SPLIT=Zwischenzeit
-SPLIT_TIME=Zwischenzeit
+SPLIT=Zeit
+SPLIT-TIME=Zwischenzeit
 SQUARE_LEFT=90 Links
 SQUARE_RIGHT=90 Rechts
 STANDARD_CALL=Standardansage
@@ -323,7 +323,7 @@ WATER=Wasser
 WET=Nass
 WIDE=Breit
 WIDEOUT=Breiter
-WOODEN_FENCE=Holzzaun
+
 
 
 ; categories
