Sacrf Rechts und Scarf Links als Audio hinzugefügt und in Smo Mix die 2 links und 2 rechts damit ersetzt

--- a/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
+++ b/Plugins/Pacenote/language/german/pacenotes/packages/strings.ini
@@ -236,7 +236,8 @@ ROUND_BARRELS=Fässer (rund)
 RUBBLE=Geröll
 RUTS=Rillen
 SHARP=Scharf
-SHARP=Spitz
+SHARP_RIGHT=Scharf Rechts
+SHARP_LEFT=Scharf Links
 SHORT=Kurz
 SHORTSHORT=Sehr Kurz
 SHOULDER=Bankett
